[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/actors/FadeTransition.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/popups/YesNoPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/font/Run_40.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/images/tilesets/default.tres" type="TileSet" id=5]
[ext_resource path="res://src/scripts/ScreenMainMenu.gd" type="Script" id=6]
[ext_resource path="res://assets/images/ui/play.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/shutdown.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/cart.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/gear.png" type="Texture" id=10]
[ext_resource path="res://assets/images/ui/medal.png" type="Texture" id=11]
[ext_resource path="res://assets/images/ui/leaderboards.png" type="Texture" id=13]
[ext_resource path="res://src/scripts/GameTileMap.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 208, 48 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 8
collision_mask = 0
occluder_light_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 12, 2, 0, 65536, 0, 0, 65548, 2, 0, 131072, 0, 0, 131084, 2, 0, 196608, 0, 0, 196620, 2, 0, 262144, 0, 0, 262156, 2, 0, 327680, 0, 0, 327692, 2, 0, 393216, 0, 0, 393228, 2, 0, 458752, 0, 0, 458764, 2, 0, 524288, 0, 0, 524300, 2, 0, 589824, 0, 0, 589836, 2, 0, 655360, 0, 0, 655372, 2, 0, 720896, 0, 0, 720908, 2, 0, 786432, 0, 0, 786444, 2, 0, 851968, 0, 0, 851980, 2, 0, 917504, 0, 0, 917516, 2, 0, 983040, 0, 0, 983052, 2, 0, 1048576, 0, 0, 1048588, 2, 0, 1114112, 0, 0, 1114124, 2, 0, 1179648, 0, 0, 1179649, 6, 0, 1179650, 6, 0, 1179651, 6, 0, 1179652, 6, 0, 1179653, 6, 0, 1179654, 6, 0, 1179655, 6, 0, 1179656, 6, 0, 1179657, 6, 0, 1179658, 6, 0, 1179659, 6, 0, 1179660, 2, 0 )
script = ExtResource( 15 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 72.0
margin_right = 176.0
margin_bottom = 168.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0.772549, 0.466667, 0.0313726, 1 )
custom_constants/shadow_offset_y = 6
text = "GAME_NAME"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="Button" parent="."]
margin_left = 32.0
margin_right = 94.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -94.0
margin_right = -32.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -57.0
margin_right = 33.0
margin_bottom = -1.0
mouse_default_cursor_shape = 2
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -168.0
margin_bottom = -112.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AchievementsButton" type="Button" parent="ButtonsContainer"]
margin_left = 95.0
margin_right = 157.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 11 )
flat = true

[node name="HighscoreButton" type="Button" parent="ButtonsContainer"]
margin_left = 177.0
margin_right = 239.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 13 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="Button" parent="ButtonsContainer"]
margin_left = 259.0
margin_right = 321.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 339, 384 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 445 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 208, 24 )
shape = SubResource( 7 )

[node name="QuitPopup" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -90.0
margin_right = 150.0
margin_bottom = 90.0
message = "LABEL_CONFIRM_QUIT"

[node name="FadeTransition" parent="." instance=ExtResource( 1 )]
visible = false
[connection signal="pressed" from="OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/AchievementsButton" to="." method="_on_AchievementsButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/HighscoreButton" to="." method="_on_HighscoreButton_pressed"]
[connection signal="pressed" from="ButtonsContainer/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="first_jump" from="Player" to="." method="_on_Player_first_jump"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="pressed_yes_no" from="QuitPopup" to="." method="_on_QuitPopup_pressed_yes_no"]
[connection signal="animation_finished" from="FadeTransition" to="." method="_on_FadeTransition_animation_finished"]
